--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello world
+---
+title: "Welcome to my blog"
+---
+
+I'm glad you are here. I plan to talk about my new blog and stuff
+
+### just trying this
+
